# cax

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: docs.yml  publish-to-pypi.yml  ruff.yml  tests.yml
cax/: __init__.py  types.py
cax/core/: __init__.py  ca.py  state.py
cax/core/perceive/: __init__.py  conv_perceive.py  depthwise_conv_perceive.py  dwconv_perceive.py  kernels.py  lenia_perceive.py  moore_perceive.py  particle_life_perceive.py  perceive.py  von_neumann_perceive.py
cax/core/update/: __init__.py  elementary_update.py  lenia_update.py  life_update.py  mlp_update.py  nca_update.py  particle_life_update.py  residual_update.py  update.py
cax/models/boids/: __init__.py  boid_policy.py  boids.py  boids_perceive.py  boids_update.py  types.py
cax/models/elementary/: __init__.py  elementary_ca.py  elementary_ca_perceive.py  elementary_ca_update.py
cax/models/flow_lenia/: __init__.py  flow_lenia.py  flow_lenia_update.py  lenia.py  lenia_update.py
cax/models/lenia/: __init__.py  kernel.py  lenia.py  lenia_perceive.py  lenia_update.py  types.py
cax/models/lenia/assets/5N7KKM/: Aquarium_swarm.pickle  Aquarium_swarm_gyrating.pickle  Aquarium_swarm_twin.pickle  rule_params.pickle
cax/models/lenia/assets/VT049W/: Aquarium.pickle  (+1 more)
cax/models/life/: __init__.py  life.py  life_perceive.py  life_update.py
cax/models/particle_lenia/: __init__.py  growth.py  particle_lenia.py  particle_lenia_perceive.py  rule.py  types.py
cax/models/particle_life/: __init__.py  particle_life.py  particle_life_perceive.py  particle_life_update.py  types.py
cax/nn/: __init__.py  buffer.py  pool.py  vae.py
cax/utils/: __init__.py  emoji.py  image.py  render.py
docs/api/: api.md  core.md  cs.md  nn.md  perceive.md  update.md  utils.md
docs/api/cs/: boids.md  elementary.md  flow_lenia.md  lenia.md  life.md  particle_lenia.md  particle_life.md
examples/: 00_getting_started.ipynb  10_elementary.ipynb  10_elementary_ca.ipynb  11_life.ipynb  1d_arc_nca.ipynb  20_lenia.ipynb  21_flow_lenia.ipynb  22_particle_lenia.ipynb  30_particle_life.ipynb  31_boids.ipynb  40_growing_nca.ipynb  41_growing_conditional_nca.ipynb  42_growing_unsupervised_nca.ipynb  43_diffusing_nca.ipynb  44_self_classifying_mnist.ipynb  45_self_autoencoding_mnist.ipynb  46_1d_arc_nca.ipynb  47_attention_nca.ipynb  50_vae.ipynb  51_rrcnn.ipynb  52_growing_nca_es.ipynb  arc_nca.ipynb  diffusing_nca.ipynb  elementary_ca.ipynb  generalist_arc_nca.ipynb  growing_conditional_nca.ipynb  growing_nca.ipynb  growing_unsupervised_nca.ipynb  lenia.ipynb  life.ipynb  particle_lenia.ipynb  particle_life.ipynb  rl_nca.ipynb  rrcnn.ipynb  self_autoencoding_mnist.ipynb  self_classifying_mnist.ipynb  test.ipynb  vae.ipynb
src/cax/: __init__.py  types.py
src/cax/core/: __init__.py  ca.py  cs.py
src/cax/core/perceive/: __init__.py  conv_perceive.py  kernels.py  moore_perceive.py  perceive.py  von_neumann_perceive.py
src/cax/core/update/: __init__.py  mlp_update.py  nca_update.py  residual_update.py  update.py
src/cax/cs/: __init__.py
src/cax/cs/boids/: __init__.py  cs.py  perceive.py  perception.py  policy.py  state.py  update.py
src/cax/cs/elementary/: __init__.py  cs.py  perceive.py  update.py
src/cax/cs/flow_lenia/: __init__.py  cs.py  update.py
src/cax/cs/lenia/: __init__.py  cs.py  kernel.py  metrics.py  perceive.py  rule.py  update.py
src/cax/cs/life/: __init__.py  cs.py  perceive.py  update.py
src/cax/cs/particle_lenia/: __init__.py  cs.py  perceive.py  rule.py  update.py
src/cax/cs/particle_life/: __init__.py  cs.py  perceive.py  perception.py  state.py  update.py
src/cax/models/boids/: boids_perceive.py  boids_update.py  perception.py  state.py
src/cax/models/elementary/: elementary_ca.py  elementary_ca_perceive.py  elementary_ca_update.py
src/cax/models/flow_lenia/: __init__.py  flow_lenia.py  flow_lenia_update.py
src/cax/models/lenia/: __init__.py  growth.py  kernel.py  lenia_perceive.py  lenia_update.py  metrics.py
src/cax/models/life/: __init__.py  life.py  life_update.py
src/cax/models/particle_lenia/: kernel.py  particle_lenia.py  particle_lenia_perceive.py  particle_lenia_update.py
src/cax/models/particle_life/: __init__.py  particle_life.py  particle_life_perceive.py  particle_life_update.py
src/cax/nn/: buffer.py  pool.py  vae.py
src/cax/systems/boids/: boids.py  boids_perceive.py
src/cax/systems/elementary/: __init__.py  elementary_ca.py  elementary_ca_update.py
src/cax/systems/lenia/: kernel.py  lenia.py
src/cax/systems/life/: life.py  life_perceive.py  life_update.py
src/cax/systems/particle_lenia/: particle_lenia.py  particle_lenia_perceive.py
src/cax/systems/particle_life/: particle_life_update.py  state.py
src/cax/utils/: emoji.py  render.py
tests/test_core/: test_ca.py  test_state.py
tests/test_core/test_perceive/: test_conv_perceive.py  test_depthwise_conv_perceive.py  test_dwconv_perceive.py  test_kernels.py  test_lenia_perceive.py  test_moore_perceive.py  test_particle_life_perceive.py  test_von_neumann_perceive.py
tests/test_core/test_update/: test_elementary_update.py  test_lenia_update.py  test_life_update.py  test_mlp_update.py  test_nca_update.py  test_particle_life_update.py  test_residual_update.py
tests/test_cs/: test_boids.py  test_elementary.py  test_flow_lenia.py  test_lenia.py  test_life.py  test_particle_lenia.py  test_particle_life.py
tests/test_nn/: test_buffer.py  test_pool.py  test_vae.py
tests/test_utils/: test_emoji.py  test_image.py  test_render.py
(+11 files in other folders)
