[build-system]
requires = ["setuptools>=74.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cax"
version = "0.1.6"
dependencies = [
	"jax",
	"flax",
	"optax",
	"pillow",
]
requires-python = ">=3.10"
authors = [
  { name="Maxence Faldor", email="maxencefaldor@gmail.com" },
]
description = "Cellular Automata Accelerated in JAX"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cellular automata", "self-organization", "emergence"]
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.2",
	"pytest-cov>=5.0.0",
	"ruff>=0.6.4",
	"mypy>=1.11.2",
]
examples = [
	"torch",
	"torchvision",
	"tqdm",
	"ipykernel",
	"mediapy",
]

[project.urls]
Homepage = "https://github.com/maxencefaldor/cax"

[tool.setuptools.packages.find]
where = ["."]
include = ["cax*"]

[tool.ruff]
src = ["cax", "tests"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "D", "F", "I", "N", "SIM", "UP", "W"]
ignore = ["N803", "N806", "D203", "D206", "D213", "W191"]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
show_error_codes = "True"
warn_unused_ignores = "True"

[[tool.mypy.overrides]]
ignore_missing_imports = true
