[project]
name = "cax"
version = "0.3.2"
description = "Cellular Automata Accelerated in JAX"
authors = [{ name="Maxence Faldor", email="maxencefaldor@gmail.com" }]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
	"jax>=0.8.0",
	"flax>=0.12.0",
	"optax>=0.2.0",
	"pillow>=11.1.0",
]
keywords = [
	"complex systems",
	"artificial life",
	"open-endedness",
	"emergence",
	"self-organization",
	"cellular automata",
	"neural cellular automata",
]
classifiers = [
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
	"pytest-cov>=5.0.0",
	"ruff>=0.6.0",
	"mypy>=1.11.0",
]
docs = [
	"mkdocs",
	"mkdocs-material",
	"mkdocstrings[python]",
]
examples = [
	"torchvision>=0.21.0",
	"tqdm>=4.67.0",
	"evosax>=0.2.0",
	"ipykernel>=6.29.0",
	"ipywidgets>=8.1.0",
	"mediapy>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/maxencefaldor/cax"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["src", "tests"]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "D", "F", "I", "N", "SIM", "UP", "W"]
ignore = [
	"D203",  # incorrect-blank-line-before-class
	"D206",  # docstring-tab-indentation
	"D213",  # multi-line-summary-second-line
	"N803",  # non-lowercase-variable-in-function
	"N806",  # invalid-argument-name
	"W191",  # tab-indentation
]

[tool.ruff.lint.per-file-ignores]
"**/*.ipynb" = [
	"F811",  # redefined-while-unused
]

[tool.ruff.format]
indent-style = "tab"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
show_error_codes = "True"
warn_unused_ignores = "True"
